--- a/strimzi/kafka-single-persistent.yml
+++ b/strimzi/kafka-single-persistent.yml
@@ -9,11 +9,11 @@ spec:
     listeners:
       - name: plain
         port: 9092
-        type: internal
+        type: external
         tls: false
       - name: tls
         port: 9093
-        type: internal
+        type: external
         tls: true
     config:
       offsets.topic.replication.factor: 1
