--- a/strimzi/kafka-single-persistent.yml
+++ b/strimzi/kafka-single-persistent.yml
@@ -10,11 +10,17 @@ spec:
       - name: plain
         port: 9092
         type: loadbalancer
-        tls: false
+        tls: true
+        authentication:
+          type: tls
       - name: tls
         port: 9093
         type: loadbalancer
         tls: true
+        authentication:
+          type: tls 
+    authorization:
+      type: simple
     config:
       offsets.topic.replication.factor: 1
       transaction.state.log.replication.factor: 1
