--- a/strimzi/kafka-persistent.yml
+++ b/strimzi/kafka-persistent.yml
@@ -1,30 +1,24 @@
 apiVersion: kafka.strimzi.io/v1beta2
 kind: Kafka
 metadata:
-  name: my-devcluster
+  name: kafka-cluster
 spec:
   kafka:
     version: 2.7.0
-    replicas: 1
+    replicas: 3
     listeners:
       - name: plain
         port: 9092
-        type: loadbalancer
-        tls: true
-        authentication:
-          type: tls
+        type: internal
+        tls: false
       - name: tls
         port: 9093
-        type: loadbalancer
+        type: internal
         tls: true
-        authentication:
-          type: tls 
-    authorization:
-      type: simple
     config:
-      offsets.topic.replication.factor: 1
-      transaction.state.log.replication.factor: 1
-      transaction.state.log.min.isr: 1
+      offsets.topic.replication.factor: 3
+      transaction.state.log.replication.factor: 3
+      transaction.state.log.min.isr: 2
       log.message.format.version: "2.7"
       inter.broker.protocol.version: "2.7"
     storage:
@@ -35,7 +29,7 @@ spec:
         size: 100Gi
         deleteClaim: false
   zookeeper:
-    replicas: 1
+    replicas: 3
     storage:
       type: persistent-claim
       size: 100Gi
